# GEA-Game

./: CMakeLists.txt  main.cpp
Scene/DemoGame/: Backgrounds.h  Colliders.h  Collision.h  DemoGame.h  Player.h  Sound.h  Sprites.h  Tilemap.h
Scene/Engine/: Components.h  Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Systems.h
Scene/Engine/Graphics/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
cmake/modules/: FindSDL2_Image.cmake
